# F2S3_pc_deformation_monitoring

./: .dockerignore  .git_archival.txt  .gitignore  .release-please-manifest.json  CHANGELOG.md  Dockerfile  LICENSE  README.md  docker-compose.yaml  f2s3_deformation_analysis.py  f2s3_deformation_analysis_debug.py  main.py  pyproject.toml  release-please-config.json  requirements.txt  run_instructions.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: docker-ghcr.yml  enforce_versioning.yml  push-probe.yml  release-please.yml  versioning.yml
cpp_core/pc_tiling/: CMakeLists.txt  README.md  generate_wraper.sh  pc_tiling.cpp  pc_tiling.h  pc_tiling.i  pc_tiling.py  pc_tiling_backup.cpp  pc_tiling_wrap.cxx
cpp_core/supervoxel_segmentation/: .supervoxel.cpp.swp  CMakeLists.txt  README.md  generate_wraper.sh  pylib.cpp  supervoxel.cpp  supervoxel.h  supervoxel.i  supervoxel.py  supervoxel_wrap.cxx
cpp_core/supervoxel_segmentation/codelibrary/base/: algorithm.h
cpp_core/supervoxel_segmentation/codelibrary/geometry/io/: xyz_io.h
data/_sample_folder/: README.md
docs/: development.md  installation.md  installation_ubuntu2004.md
lib/: descriptor_model.py  filtering_model.py  utils.py
scripts/: install_pcl.sh
src/f2s3/: __init__.py  check.py  cli.py  config.py  core.py  data.py  descriptor_model.py  filtering_model.py  utils.py
src/f2s3/pretrained_models/outlier_filtering/: model_best.pt
