[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8", "wheel", "cmake", "swig"]
build-backend = "setuptools.build_meta"

[project]
name = "f2s3"
authors = [
    {name = "Zan Gojcic"},
    {name = "Nicholas Meyer", email = "meyernic@ethz.ch"},
]
maintainers = [
    {name = "Nicholas Meyer", email = "meyernic@ethz.ch"},
]
description = "Description of ModuleA"
requires-python = ">=3.11"
keywords = ["ONE", "TWO"]
license = {file = "LICENSE"} # To be changed once released
classifiers = [ # https://packaging.python.org/en/latest/guides/writing-pyproject-toml/#classifiers
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",

    "Private :: Do Not Upload" # REMOVE BEFORE FLIGHT -- PyPI will always reject packages with classifiers beginning with Private ::
]

dynamic = ["version", "readme"]

dependencies = [
    "torch",
    "torchvision",
    "torchaudio",
    "open3d ~=0.15",
    "numpy",
    "glob2",
    "pybind11",
    "tqdm",
    "coloredlogs",
    "hnswlib",
    "scikit-learn",
    "pc_tiling @ git+ssh://git@github.com/gseg-ethz/pc_tiling.git@v0.1.0",
    "supervoxel @ git+ssh://git@github.com/gseg-ethz/supervoxel.git@v0.1.0",
]

[tool.setuptools]
packages = ["f2s3"]

[tool.setuptools.package-dir]
f2s3 = "src/f2s3"

[tool.setuptools.package-data]
f2s3 = [
    "pretrained_models/feature_descriptor/model_best.pth",
    "pretrained_models/outlier_filtering/model_best.pt",

]

[tool.setuptools.dynamic]
readme = {file = ["README.md"]}

[tool.setuptools_scm]
write_to = "src/f2s3/_version.py"
local_scheme = "no-local-version"
version_scheme = "post-release"

[project.urls]
Homepage = "https://example.com"
Documentation = "https://readthedocs.org"
Repository = "https://github.com/me/spam.git"
Issues = "https://github.com/me/spam/issues"
Changelog = "https://github.com/me/spam/blob/master/CHANGELOG.md"

#[project.optional-dependencies]
#doc = ["sphinx"]
#dev = [
#    "black",  # Code formatter to make it consistant with PEP rules
#    "flake8", # Code linter: Analyzes source code for errors, vulnerabilities, and stylistic issues
#]
#
[project.scripts]
f2s3 = "f2s3.cli:main"